--- a/MvcCombat/Views/Home/EndSession.cshtml
+++ b/MvcCombat/Views/Home/EndSession.cshtml
@@ -25,7 +25,7 @@
  
     <script>
         function Restart() {
-            window.location.href = 'https://localhost:44384/Home/Index';
+            window.location.href = 'Index';
         }
     </script>
 
