--- a/MvcCombat/Views/Home/Index.cshtml
+++ b/MvcCombat/Views/Home/Index.cshtml
@@ -16,7 +16,7 @@
     <p style="text-align: center"><span style="font-size: 22pt;"> Welcome to <b>Combat Game</b></span></p>
 
     <h1>Enter your name</h1>
-    <form method="post" action="~/Home/Waiting">
+    <form method="get" action="~/Home/Selecting">
 
         <input type="text" name="identity" id="name" />
         
