--- a/MvcCombat/Views/Home/Waiting.cshtml
+++ b/MvcCombat/Views/Home/Waiting.cshtml
@@ -18,9 +18,10 @@
 
         <script>
             setTimeout(function () {
-                window.location='https://localhost:44384/Home/Refresh?identity=@ViewData["identity"]';
+                window.location='Refresh?identity=@ViewData["identity"]';
             }, 2000);
         </script>
+
     }
     else
     {
@@ -28,7 +29,7 @@
 
         <script>
             setTimeout(function () {
-                window.location='https://localhost:44384/Home/Waiting?identity=@ViewData["identity"]';
+                window.location='Waiting?identity=@ViewData["identity"]';
             }, 5000);
         </script>
     }
