refactoring and updating

--- a/MvcCombat/Views/Home/EndSession.cshtml
+++ b/MvcCombat/Views/Home/EndSession.cshtml
@@ -14,11 +14,11 @@
 
     @if (Model.P1State.Health > 0)
     {
-        <p style="text-align: center"><span style="font-size: 22pt;"><b>@Model.P1State.playerName WIN</b></span></p>
+        <p style="text-align: center"><span style="font-size: 22pt;"><b>@Model.P1State.Name WIN</b></span></p>
     }
     else
     {
-        <p style="text-align: center"><span style="font-size: 22pt;"><b>@Model.P2State.playerName WIN</b></span></p>
+        <p style="text-align: center"><span style="font-size: 22pt;"><b>@Model.P2State.Name WIN</b></span></p>
     }
 
     <button class="btn btn-default" onclick="Restart();">Play Again</button>
@@ -29,6 +29,5 @@
         }
     </script>
 
-    @*window.location.href = 'https://localhost:44384/Home/Start?identity=@ViewData["identity"]';*@
 </body>
 </html>
