--- a/MvcCombat/Views/Home/Index.cshtml
+++ b/MvcCombat/Views/Home/Index.cshtml
@@ -18,7 +18,7 @@
     <h1>Enter your name</h1>
     <form method="get" action="~/Home/Selecting">
 
-        <input type="text" name="identity" id="name" />
+        <input type="text" name="name" id="name" />
         
         <p>
             <input type="submit" value="Submit" />
